# acs_doctor_matching

./: .gitignore  README.md  algo.py  data_clean.py  full_runner.py  metrics.csv  metrics.py  runner.py  runner_flow.py  schedule  schedule_output.txt  Лікарі_київ.xlsx
basic_algo/: algo.py
basic_algo/testing_data/: test1.py  test2.py  test3.py  test4.py
cpp_impl/: CMakeLists.txt  json.hpp  main.cpp  new_csv.py
cpp_impl/data/: Cleaned_Doctor_CSV.csv  loc_data_with_specializations.csv  rooms_locations_updated.json
cpp_impl/include/: min_cost_max_flow.h  schedule_generator.h
cpp_impl/output/: _week_1.txt  _week_2.txt  _week_3.txt  _week_4.txt
cpp_impl/src/: min_cost_max_flow.cpp  schedule_generator.cpp
data/: data_clean.py  doctor_prefs.csv  doctor_specialities.csv  doctors_160.csv  doctors_schedule_160.csv  doctors_specialities.csv  doctors_specialties.csv  rooms_80.csv  rooms_specialities.csv  Лікарі_київ.xlsx
data/csv_export/: rating_table.csv
data/new_data/: loc_data.csv  loc_data_simplified.csv  loc_data_with_specializations.csv  radiology.csv  rooms_locations_updated.json
data/old_data/: doctor_prefs.csv  doctor_specialities.csv  rooms_specialities.csv
gale-shapley-algo/: CMakeLists.txt  algo.cpp  algo.py  new_algo.py  schedule_output.txt  super_algo.py
gale_shapley_algo/: CMakeLists.txt  algo.cpp  algo.py
metrics/: metrics.py
new_algo/: algo.py  algo_flow.py  maximum_flow_impl.py
testing_data/: test2.py
